--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_light">#D85858</color>
+    <color name="red_dark">#601919</color>
+    <color name="blue_light">#3B71C3</color>
+    <color name="blue_dark">#223165</color>
+    <color name="yellow">#D6C367</color>
+    <color name="orange">#BD7034</color>
+    <color name="green">#387837</color>
 </resources>
