--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="yellow">#D6C367</color>
     <color name="orange">#BD7034</color>
     <color name="green">#387837</color>
+    <color name="pink">#F3C5CF</color>
 </resources>
