--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="orange">#BD7034</color>
     <color name="green">#387837</color>
     <color name="pink">#F3C5CF</color>
+    <color name="gray">#A8A8A8</color>
 </resources>
