--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
@@ -82,6 +82,7 @@
         android:id="@+id/SingleClassRecyclerView"
         app:layout_constraintTop_toBottomOf="@+id/infoBar"
         android:layout_marginTop="10dp"
+        android:padding="10dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
