--- a/app-tracker-teacher/app/src/main/res/layout/layout_meeting.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_meeting.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_meetingbox"
     android:padding="20dp"
-    android:background="@drawable/template_rounded_corner">
+    android:background="@drawable/template_rounded_corner"
+    android:backgroundTint="@color/gray"
+    android:layout_marginBottom="20dp">
 
     <TextView
         android:id="@+id/txtStudentsPresent"
@@ -13,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="69"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="JULY 69, 1969 | M"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="20dp"
     />
 
 
