--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="dlsu_green">#00703C</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="light_green">#00a357</color>
+    <color name="dark_green">#00703c</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
