--- a/app-tracker-teacher/app/src/main/res/layout/layout_student_requests.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_student_requests.xml
@@ -19,11 +19,11 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnAddStudent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/ivDisplayPicture"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivDisplayPicture"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
