--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_meeting_view.xml
@@ -6,4 +6,83 @@
     android:layout_height="match_parent"
     tools:context=".SingleMeetingView">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:id="@+id/topBar"
+        android:padding="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtClassTitle"
+            android:text="CLASSNAME - SECTION"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+        <View
+            android:id="@+id/dividerLine"
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtClassTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtDate"
+        android:text="JULY 31, 2021 | M"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@+id/topBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/statusBar"
+        app:layout_constraintTop_toBottomOf="@id/txtDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtStatusText"
+            android:text="STATUS: "
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtStatus"
+            android:text="CLOSED"
+            app:layout_constraintStart_toEndOf="@id/txtStatusText"
+            app:layout_constraintTop_toTopOf="@id/txtStatusText"
+            app:layout_constraintBottom_toBottomOf="@id/txtStatusText"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/template_rounded_corner"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:padding="5dp"
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
