--- a/app-tracker-teacher/app/src/main/res/layout/activity_main.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
         />
+
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btnRegister"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
