--- a/app-tracker-teacher/app/src/main/res/layout/activity_create_course.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_create_course.xml
@@ -11,11 +11,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="212dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
+        android:hint="Course Name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="Course Name"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,6 +28,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="100dp"
+        android:fontFamily="@font/roboto"
         android:text="@string/btnCreateCourse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnCancelCreate"
@@ -39,6 +41,7 @@
         android:layout_marginStart="101dp"
         android:layout_marginTop="38dp"
         android:backgroundTint="@color/gray"
+        android:fontFamily="@font/roboto"
         android:text="@string/btnCancelCreate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etCourseSection" />
@@ -49,9 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
+        android:hint="Section"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="Section"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +72,9 @@
         android:layout_marginTop="119dp"
         android:layout_marginEnd="126dp"
         android:layout_marginBottom="30dp"
+        android:fontFamily="@font/roboto"
         android:text="@string/tvCreateCourseHeader"
+        android:textColor="#004D40"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/etCourseName"
