--- a/app-tracker-teacher/app/src/main/res/layout/layout_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_class.xml
@@ -1,34 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutbox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/template_rounded_corner"
-    android:layout_margin="10dp"
-    android:paddingTop="30dp"
-    android:paddingBottom="30dp"
-    >
+    android:layout_margin="0dp"
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/txtClassCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MOBDEVE"
-        android:textStyle="bold"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardCourse"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/txtSectionCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="S13"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtClassCode" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/courseConstraint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#004D40">
+
+            <ImageButton
+                android:id="@+id/btnMoreOptions"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="4dp"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_more_settings_horizontal_foreground"
+                />
+
+            <TextView
+                android:id="@+id/txtClassCode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="MOBDEVE"
+                android:textColor="#FFFFFF"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <TextView
+                android:id="@+id/txtSectionCode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="31dp"
+                android:gravity="center"
+                android:text="S15"
+                android:textColor="#FFFFFF"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtClassCode"
+                tools:layout_editor_absoluteX="0dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
