--- a/app-tracker-teacher/app/src/main/res/layout/layout_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_class.xml
@@ -31,19 +31,19 @@
             android:layout_height="match_parent"
             android:background="#004D40">
 
-            <ImageButton
-                android:id="@+id/btnMoreOptions"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="4dp"
-                android:adjustViewBounds="true"
-                android:background="@null"
-                android:scaleType="fitXY"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_more_settings_horizontal_foreground"
-                />
+<!--            <ImageButton-->
+<!--                android:id="@+id/btnMoreOptions"-->
+<!--                android:layout_width="48dp"-->
+<!--                android:layout_height="48dp"-->
+<!--                android:layout_marginTop="60dp"-->
+<!--                android:layout_marginEnd="4dp"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:background="@null"-->
+<!--                android:scaleType="fitXY"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:srcCompat="@drawable/ic_more_settings_horizontal_foreground"-->
+<!--                />-->
 
             <TextView
                 android:id="@+id/txtClassCode"
