--- a/app-tracker-teacher/app/src/main/res/layout/layout_meeting.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_meeting.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_meetingbox"
-    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
     android:background="@drawable/template_rounded_corner"
-    android:backgroundTint="@color/gray"
-    android:layout_marginBottom="20dp">
+    android:backgroundTint="#EEEEEE"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/txtStudentsPresent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="69"
-        android:textStyle="bold"
+        android:textColor="#004D40"
         android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        app:layout_constraintStart_toEndOf="@id/txtStudentsPresent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="50dp"
         android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
         android:text="JULY 69, 1969 | M"
-        android:textStyle="bold"
+        android:textColor="#004D40"
         android:textSize="20dp"
-    />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txtStudentsPresent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
