--- a/app-tracker-teacher/app/src/main/res/values/colors.xml
+++ b/app-tracker-teacher/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="green">#387837</color>
     <color name="pink">#F3C5CF</color>
     <color name="gray">#A8A8A8</color>
+    <color name="light_gray">#EEEEEE</color>
 </resources>
